$NetBSD: CHANGES,v 1.10241 2005/05/29 16:11:49 jschauma Exp $

Changes to the packages collection and infrastructure in 2005:
	
	Updated textproc/antiword to 0.36.1 [wiz 2005-01-01]
	Updated finance/xquote to 2.6.10 [wiz 2005-01-01]
	Updated databases/mysql-server to 4.0.22nb2 [minskim 2005-01-01]
	Updated databases/mysql4-client to 4.1.7nb6 [minskim 2005-01-01]
	Updated databases/mysql4-server to 4.1.7nb3 [minskim 2005-01-01]
	Updated databases/mysql3-client to 3.23.58nb2 [minskim 2005-01-01]
	Updated databases/mysql3-server to 3.23.58nb3 [minskim 2005-01-01]
	Updated devel/eel to 1.0.1nb10 [minskim 2005-01-01]
	Updated devel/libgnomeui to 2.8.0nb2 [minskim 2005-01-01]
	Updated devel/papaya to 0.1.7nb1 [minskim 2005-01-01]
	Updated devel/patchutils to 0.2.30nb1 [minskim 2005-01-01]
	Updated editors/abiword-plugins to 2.0.14nb1 [minskim 2005-01-01]
	Updated editors/conglomerate to 0.7.12nb6 [minskim 2005-01-01]
	Updated graphics/grap to 1.30nb1 [minskim 2005-01-01]
	Updated net/poptop to 1.2.1 [cube 2005-01-01]
	Updated devel/automake to 1.9.4 [wiz 2005-01-01]
	Updated math/gnumeric14 to 1.4.1nb1 [minskim 2005-01-01]
	Updated devel/monotone to 0.16 [jmmv 2005-01-01]
	Updated databases/gramps to 1.0.8nb1 [minskim 2005-01-01]
	Updated textproc/texi2html to 1.64nb2 [minskim 2005-01-01]
	Updated www/apache2 to 2.0.52nb7 [minskim 2005-01-01]
	Updated net/ethereal to 0.10.8nb1 [minskim 2005-01-01]
	Updated games/wesnoth to 0.8.8 [wiz 2005-01-01]
	Added net/pppd version 2.4.3 [cube 2005-01-02]
	Added net/mppe-lkm version 0.0.4 [cube 2005-01-02]
	Removed net/ppp-mppe [cube 2005-01-02]
	Updated databases/py-bsddb3 to 4.3.0 [seb 2005-01-02]
	Added devel/bugzilla version 2.18rc3 [adrianp 2005-01-02]
	Updated audio/icecast to 2.2.0 [wiz 2005-01-02]
	Updated lang/tcl-tclX to 8.3.5nb2 [minskim 2005-01-02]
	Updated lang/tk-tclX to 8.3.5nb2 [minskim 2005-01-02]
	Updated finance/gnucash to 1.8.10nb2 [wiz 2005-01-02]
	Updated www/apache2 to 2.0.52nb8 [minskim 2005-01-02]